--- a/index.html
+++ b/index.html
@@ -8,10 +8,40 @@
     <script src="app.js"></script>
     <!-- import CSS styles -->
     <link rel="stylesheet" href="styles.css" /> 
+    <link rel="stylesheet" href="bootstrap.css" /> 
   </head>
 
   <!-- page content goes into <body> -->
   <body>
+    <nav class = "navbar bg-light">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#"> Personas and Stroryboarding
+          <img src="assets/kid icon.png" height="auto" width="100px">
+        </a>
+        <div class="collapse navbar-collapse">
+          <ul class="navbar-nav ml-auto">
+            <li class="navbar-item"><a href="#about" class="nav-link">About</a></li>
+            <li class="navbar-item"><a href="#interface" class="nav-link">Interface</a></li>
+            <li class="navbar-item"><a href="#observation" class="nav-link">Observation</a></li>
+            <li class="navbar-item"><a href="#personas" class="nav-link">Personas</a></li>
+            <li class="navbar-item"><a href="#storyboard"class="nav-link">Storyboard</a></li>
+          </ul>
+        </div>
+      </div>
+      
+    </nav>
+    <div>
+
+    </div>
+    <div>
+
+    </div>
+    <div>
+
+    </div>
+    <div>
+
+    </div>
     text
   </body>
 
