--- a/index.html
+++ b/index.html
@@ -1,48 +1,193 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta name=" viewport" content="width=device-width, initial-scale=1">
-    <title>Personas and Stroryboarding</title>
-    <!-- import javascript variables and functions -->
-    <script src="app.js"></script>
-    <!-- import CSS styles -->
-    <link rel="stylesheet" href="styles.css" /> 
-    <link rel="stylesheet" href="bootstrap.css" /> 
-  </head>
 
-  <!-- page content goes into <body> -->
-  <body>
-    <nav class = "navbar bg-light">
+<head>
+  <meta charset="utf-8">
+  <meta name=" viewport" content="width=device-width, initial-scale=1">
+  <title>Personas and Stroryboarding</title>
+  <!-- import javascript variables and functions -->
+  <script src="app.js"></script>
+  <!-- import CSS styles -->
+  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="bootstrap.css" />
+</head>
+
+<!-- page content goes into <body> -->
+
+<body>
+  <!-- Navbar section -->
+  <header>
+    <nav class="navbar navbar-expand-sm bg-light">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#"> Personas and Stroryboarding
+        <a class="navbar-brand" href="#">
           <img src="assets/kid icon.png" height="auto" width="100px">
+          Personas and Storyboarding
         </a>
-        <div class="collapse navbar-collapse">
-          <ul class="navbar-nav ml-auto">
+        <div class="collapse navbar-collapse me-3">
+          <ul class="navbar-nav ml-auto ">
             <li class="navbar-item"><a href="#about" class="nav-link">About</a></li>
             <li class="navbar-item"><a href="#interface" class="nav-link">Interface</a></li>
             <li class="navbar-item"><a href="#observation" class="nav-link">Observation</a></li>
             <li class="navbar-item"><a href="#personas" class="nav-link">Personas</a></li>
-            <li class="navbar-item"><a href="#storyboard"class="nav-link">Storyboard</a></li>
+            <li class="navbar-item"><a href="#storyboard" class="nav-link">Storyboard</a></li>
           </ul>
         </div>
       </div>
-      
     </nav>
-    <div>
-
+  </header>
+  <!-- Main Section of Webpage -->
+  <main>
+    <div class="d-flex flex-column city justify-content-center align-items-center">
+      <h1>
+        Personas and Storyboarding
+      </h1>
+      <h3>Spin Scooter Interface</h3>
     </div>
-    <div>
-
+    <!-- About Section -->
+    <div id="about" class="mb-0 justify-content-center align-items-center">
+      <h2>About the Project</h2>
+      <p>The personas and Storyboarding project asks us to step into the shoes of the user of public
+        interfaces around campus. We observed real users interacting with our chosen interface, interviewed
+        these individuals about their experiences, create personas based on these users, and illustrate a storyboard for
+        one of your personas.
+      </p>
+      <br>
     </div>
-    <div>
 
-    </div>
-    <div>
+    <!-- Interface Section -->
+    <div id="interface" class="d-flex mx-auto mb-0 justify-content-center align-items-center">
+      <h2>Spin Scooter Interface</h2>
+      <br>
+      <img src="assets/SpinInterface.png" height="auto" width="500px">
+      <p>
 
+      </p>
     </div>
-    text
-  </body>
+
+    <!-- Observation Section -->
+    <div id="observation" class="d-flex mb-0 justify-content-center align-items-center">
+      <h2>Observations</h2>
+      <p>
+        This section will discuss the Observations.
+      </p>
+    </div>
+
+    <!-- Personas Section -->
+    <div class="d-flex flex-column">
+      <div id="personas" class="d-flex mb-0 container-fluid justify-content-center align-items-center">
+        <h2 class="col-md-6 ">Personas</h2>
+
+        <!-- Cards -->
+
+        <div class="row px-md-3 px-lg-5 pt-3 pt-md-5 justify-content-center">
+          <div class="col-md-6 col-xl-5 col-xxl-4 mb-4">
+            <div class="card h-100">
+              <div class="card-header">
+                <h4>The 10-Year Study on Sleep</h4>
+              </div>
+              <div class="card-body lead">
+                <p class="card-text">To learn what behaviors affect your sleep quality, a week is not enough. Even a
+                  month
+                  can only tell you one or two things about your habits.</p>
+                <p class="card-text">SleepCoacher will run for 10 years, so you as a user can optimize your sleep
+                  behaviors
+                  over a long series of mini-experiments. Start and stop each self-experiment whenever you please.</p>
+                <img src="./assets/AidedElder.png" style="max-width: 28rem; width: 100%;">
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-6 col-xl-5 col-xxl-4 mb-4">
+            <div class="card h-100">
+              <div class="card-header">
+                <h4>The 10-Year Study on Sleep</h4>
+              </div>
+              <div class="card-body lead">
+                <p class="card-text">To learn what behaviors affect your sleep quality, a week is not enough. Even a
+                  month
+                  can only tell you one or two things about your habits.</p>
+                <p class="card-text">SleepCoacher will run for 10 years, so you as a user can optimize your sleep
+                  behaviors
+                  over a long series of mini-experiments. Start and stop each self-experiment whenever you please.</p>
+
+                <img src="./assets/Stressed Student.png" style="max-width: 28rem; width: 100%;">
+
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    </div>
+    <!-- Storyboard Section -->
+    <div id="storyboard">
+      <h2>Storyboard</h2>
+      <p>
+        This section will discuss the interface.
+      </p>
+      <br>
+      <div class="slideshow-container">
+        <div class="mySlides">
+          <div class="numbertext">1 / 3</div>
+          <img src="" style="width:100%">
+          <div class="text"></div>
+        </div>
+        <div class="mySlides">
+          <div class="numbertext">1 / 3</div>
+          <img src="assets/Page1.jpg" style="width:100%">
+          <div class="text">London, Ebgland</div>
+        </div>
+        <div class="mySlides">
+          <div class="numbertext">1 / 3</div>
+          <img src="assets/Page2.jpg" style="width:100%">
+          <div class="text">London, Ebgland</div>
+        </div>
+        <div class="mySlides">
+          <div class="numbertext">1 / 3</div>
+          <img src="assets/Page3.jpg" style="width:100%">
+          <div class="text">London, Ebgland</div>
+        </div>
+        <div class="mySlides">
+          <div class="numbertext">1 / 3</div>
+          <img src="assets/Page4.jpg" style="width:100%">
+          <div class="text">London, Ebgland</div>
+        </div>
+        <div class="mySlides">
+          <div class="numbertext">1 / 3</div>
+          <img src="assets/Page5.jpg" style="width:100%">
+          <div class="text">London, Ebgland</div>
+        </div>
+        <div class="mySlides">
+          <div class="numbertext">1 / 3</div>
+          <img src="assets/Page6.jpg" style="width:100%">
+          <div class="text">London, Ebgland</div>
+        </div>
+        <div class="mySlides">
+          <div class="numbertext">1 / 3</div>
+          <img src="assets/Page7.jpg" style="width:100%">
+          <div class="text">London, Ebgland</div>
+        </div>
+        <div class="mySlides">
+          <div class="numbertext">1 / 3</div>
+          <img src="assets/Page8.jpg" style="width:100%">
+          <div class="text">London, Ebgland</div>
+        </div>
+        <div class="mySlides">
+          <div class="numbertext">1 / 3</div>
+          <img src="assets/Page9.jpg" style="width:100%">
+          <div class="text">London, Ebgland</div>
+        </div>
+        <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+        <a class="next" onclick="plusSlides(1)">&#10095;</a>
+      </div>
+      <br>
+      <div style="text-align:center">
+        <span class="dot" onclick="currentSlide(1)"></span>
+        <span class="dot" onclick="currentSlide(2)"></span>
+        <span class="dot" onclick="currentSlide(3)"></span>
+      </div>
+    </div>
+  </main>
+</body>
 
 </html>
