--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
     <div id="storyboard">
       <h2 class="text-center ">Storyboard</h2>
       <p>
-        Below I've created a slideshow to display my storyboards for the Aided Elder persona.
+        Below I've created a slideshow to display my storyboards for the Aided Elder persona where we edit the interface to behave for explicitly for new users.
       </p>
       <br>
       <p>Press the right arrow to look at each frame.</p>
@@ -197,53 +197,51 @@
         <div class="mySlides">
           <div class="numbertext">1 / 3</div>
           <img src="" style="width:100%">
-          <div class="text"></div>
+          <div class="text">London, Ebgland</div>
         </div>
         <div class="mySlides">
           <div class="numbertext">1 / 3</div>
           <img src="assets/Page1.jpg" style="width:100%">
-          <div class="text">London, Ebgland</div>
+          <div class="text">Faith wants to walk up the hill, but is tired.</div>
         </div>
         <div class="mySlides">
           <div class="numbertext">1 / 3</div>
           <img src="assets/Page2.jpg" style="width:100%">
-          <div class="text">London, Ebgland</div>
+          <div class="text">Faith sees a spin scooter, and nervously decides to give it a shot.</div>
         </div>
         <div class="mySlides">
           <div class="numbertext">1 / 3</div>
           <img src="assets/Page3.jpg" style="width:100%">
-          <div class="text">London, Ebgland</div>
+          <div class="text">Faith looks at the screen and encounters a start menu.</div>
         </div>
         <div class="mySlides">
           <div class="numbertext">1 / 3</div>
           <img src="assets/Page4.jpg" style="width:100%">
-          <div class="text">London, Ebgland</div>
+          <div class="text">Faith taps the screen to start. They are asked if they're a new or returning user. </div>
         </div>
         <div class="mySlides">
           <div class="numbertext">1 / 3</div>
           <img src="assets/Page5.jpg" style="width:100%">
-          <div class="text">London, Ebgland</div>
+          <div class="text">Faith selects new and is asked to open the app store or play store on their cellphone. They're explicitly told that they
+            need a cellphone to ride the scooter.
+          </div>
         </div>
         <div class="mySlides">
           <div class="numbertext">1 / 3</div>
           <img src="assets/Page6.jpg" style="width:100%">
-          <div class="text">London, Ebgland</div>
+          <div class="text">Faith is asked if they're ready to continue after following the app's intallation and payment instructions.</div>
         </div>
         <div class="mySlides">
           <div class="numbertext">1 / 3</div>
           <img src="assets/Page7.jpg" style="width:100%">
-          <div class="text">London, Ebgland</div>
+          <div class="text">Faith selects yes and is instructed to press the "ride" button on the app, and scan the qr code that is now on the screen.</div>
         </div>
         <div class="mySlides">
           <div class="numbertext">1 / 3</div>
           <img src="assets/Page8.jpg" style="width:100%">
-          <div class="text">London, Ebgland</div>
+          <div class="text">Faith scans the code and is ready to ride!</div>
         </div>
-        <div class="mySlides">
-          <div class="numbertext">1 / 3</div>
-          <img src="assets/Page9.jpg" style="width:100%">
-          <div class="text">London, Ebgland</div>
-        </div>
+
         <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
         <a class="next" onclick="plusSlides(1)">&#10095;</a>
       </div>
