--- a/index.html
+++ b/index.html
@@ -120,7 +120,8 @@
       <!-- Descriptive Paragraph -->
       <div class="col-md-6">
         <p class="text-center mt-4">
-          Based on these observations, I created empathy maps for two personas representing the primary populations: busy college students and unfamiliar elders.
+          Based on these observations, I created empathy maps for two personas representing the primary populations:
+          busy college students and unfamiliar elders.
         </p>
       </div>
       <!-- Personas Col -->
@@ -139,16 +140,14 @@
                 </p>
                 <br>
                 <p class="card-text">
-                  “A college junior that’s rushing to an important class they’re late for.”
-                </p>
-                <p>For the students, the main problem with the interface relates to how busy they are.
-                  When they're in a rush, it would be beneficial to tell when the scooter is broken
-                  or has low battery without opening the Spin app to avoid wasting time in their busy schedule.</p>
-                <p>Why & How the persona represents the users:</p>
-                <ul>
-                  <li>Most of the users of these scooters are busy college students.</li>
-                  <li>It wouldn’t represent the majority population in the area if this persona was left out</li>
-                </ul>
+                <p>For older users, the main problem with the interface is that they can’t tell whether the scooter is
+                  ready to use or is locked.
+                  <br>
+                  While not the primary audience of the Spin scooter, the vehicle should be able to accommodate various
+                  bodies of differing ages and backgrounds. 
+                  <br>
+                  If there are populations who cannot understand how to use
+                  the scooter, then there are gaps in the user interface that need to be addressed.</p>
               </div>
             </div>
           </div>
@@ -176,6 +175,8 @@
                   <li>Most of the users of these scooters are busy college students.</li>
                   <li>It wouldn’t represent the majority population in the area if this persona was left out</li>
                 </ul>
+                </p>
+
               </div>
             </div>
           </div>
@@ -188,7 +189,8 @@
     <div id="storyboard">
       <h2 class="text-center ">Storyboard</h2>
       <p>
-        Below I've created a slideshow to display my storyboards for the Aided Elder persona where we edit the interface to behave for explicitly for new users.
+        Below I've created a slideshow to display my storyboards for the Aided Elder persona where we edit the interface
+        to behave for explicitly for new users.
       </p>
       <br>
       <p>Press the right arrow to look at each frame.</p>
@@ -222,19 +224,22 @@
         <div class="mySlides">
           <div class="numbertext">1 / 3</div>
           <img src="assets/Page5.jpg" style="width:100%">
-          <div class="text">Faith selects new and is asked to open the app store or play store on their cellphone. They're explicitly told that they
+          <div class="text">Faith selects new and is asked to open the app store or play store on their cellphone.
+            They're explicitly told that they
             need a cellphone to ride the scooter.
           </div>
         </div>
         <div class="mySlides">
           <div class="numbertext">1 / 3</div>
           <img src="assets/Page6.jpg" style="width:100%">
-          <div class="text">Faith is asked if they're ready to continue after following the app's intallation and payment instructions.</div>
+          <div class="text">Faith is asked if they're ready to continue after following the app's intallation and
+            payment instructions.</div>
         </div>
         <div class="mySlides">
           <div class="numbertext">1 / 3</div>
           <img src="assets/Page7.jpg" style="width:100%">
-          <div class="text">Faith selects yes and is instructed to press the "ride" button on the app, and scan the qr code that is now on the screen.</div>
+          <div class="text">Faith selects yes and is instructed to press the "ride" button on the app, and scan the qr
+            code that is now on the screen.</div>
         </div>
         <div class="mySlides">
           <div class="numbertext">1 / 3</div>
